# TIME-MANAGER

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  .hadolint.yaml  COMMIT_CONVENTION.md  CONTRIBUTING.md  NEXT_STEPS.md  README.md  Taskfile.yml  commitlint.config.js  docker-compose.prod.yml  docker-compose.yml  kickoff.pptx  krakend.json  package-lock.json  package.json
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  TASKFILE_README.md  Taskfile.yml  diesel.toml
backend/.serena/: project.yml
backend/migrations/2026-01-06-214137_create_user_role_enum/: down.sql  up.sql
backend/migrations/2026-01-06-214215_create_organizations/: down.sql  up.sql
backend/migrations/2026-01-06-214243_create_users/: down.sql  up.sql
backend/migrations/2026-01-07-001140_create_refresh_tokens/: down.sql  up.sql
backend/migrations/2026-01-07-001208_create_password_reset_tokens/: down.sql  up.sql
backend/migrations/2026-01-07-001210_create_login_attempts/: down.sql  up.sql
backend/migrations/2026-01-07-001211_create_user_sessions/: down.sql  up.sql
backend/migrations/2026-01-07-001212_create_password_history/: down.sql  up.sql
backend/migrations/2026-01-07-001213_add_password_metadata_to_users/: down.sql  up.sql
backend/migrations/2026-01-08-095324_create_invite_tokens/: down.sql  up.sql
backend/migrations/2026-01-08-150000_add_super_admin_role/: down.sql  up.sql
backend/migrations/2026-01-08-155428_add_last_used_at_to_refresh_tokens/: down.sql  up.sql
backend/migrations/2026-01-08-180000_add_session_info_to_refresh_tokens/: down.sql  up.sql
backend/migrations/2026-01-08-210000_create_clock_entry_status_enum/: down.sql  up.sql
backend/migrations/2026-01-08-210001_create_teams/: down.sql  up.sql
backend/migrations/2026-01-08-210002_create_team_members/: down.sql  up.sql
backend/migrations/2026-01-08-210003_create_work_schedules/: down.sql  up.sql
backend/migrations/2026-01-08-210004_create_work_schedule_days/: down.sql  up.sql
backend/migrations/2026-01-08-210005_add_work_schedule_to_users/: down.sql  up.sql
backend/migrations/2026-01-08-210006_create_clock_entries/: down.sql  up.sql
backend/migrations/2026-01-09-000001_add_work_schedule_to_teams/: down.sql  up.sql
backend/migrations/2026-01-09-085848_rename_holidays_to_closed_days/: down.sql  up.sql
backend/migrations/2026-01-09-100259_add_phone_to_users/: down.sql  up.sql
backend/migrations/2026-01-10-000001_create_absence_status_enum/: down.sql  up.sql
backend/migrations/2026-01-10-000002_create_absence_types/: down.sql  up.sql
backend/migrations/2026-01-10-000003_create_absences/: down.sql  up.sql
backend/migrations/2026-01-10-000004_create_leave_balances/: down.sql  up.sql
backend/migrations/2026-01-10-000005_create_holidays/: down.sql  up.sql
backend/migrations/2026-01-10-000006_create_notifications/: down.sql  up.sql
backend/migrations/2026-01-10-100000_create_audit_logs/: down.sql  up.sql
backend/migrations/2026-01-10-110000_add_soft_delete_users/: down.sql  up.sql
backend/migrations/2026-01-12-000001_create_clock_restrictions/: down.sql  up.sql
backend/migrations/2026-01-12-000002_create_break_system/: down.sql  up.sql
backend/migrations/2026-01-12-000003_add_max_daily_clock_events/: down.sql  up.sql
backend/scripts/: demo-seed.sql  entrypoint.dev.sh  init-seed.sh  seed.sql
backend/src/: lib.rs  main.rs  schema.rs
backend/src/api/: router.rs
backend/src/config/: app.rs  database.rs  email.rs  hibp.rs  mod.rs
backend/src/domain/: enums.rs  mod.rs
backend/src/error/: app_error.rs
backend/src/extractors/: authenticated_user.rs  mod.rs  role_guard.rs  validated_json.rs
backend/src/middleware/: auth_middleware.rs  csrf_middleware.rs  metrics_middleware.rs  (+2 more)
backend/tests/: repository_tests.rs
(+581 files in other folders)
