[package]
name = "timemanager-backend"
version = "0.1.0"
edition = "2021"
authors = ["Trinity Team <trinity@epitech.eu>"]
description = "Time Manager SaaS Backend - Rust/Axum API"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Database
diesel = { version = "2.2", features = ["postgres", "uuid", "chrono", "numeric", "serde_json"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }
diesel_migrations = "2.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenvy = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.14"

# OpenTelemetry for distributed tracing
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
tracing-opentelemetry = "0.28"

# Authentication (for Epic 2, defined now)
jsonwebtoken = "9.2"
argon2 = { version = "0.5", features = ["std"] }
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
rand = "0.8"

# HTTP client for HIBP API
reqwest = { version = "0.12", features = ["json"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Types
uuid = { version = "1.6", features = ["v4", "serde"] }

# Caching
cached = { version = "0.46", features = ["async"] }
lazy_static = "1.4"
once_cell = "1.19"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# Email
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
fake = "2.9"
wiremock = "0.6"
serial_test = "3.0"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
